# compoundfilereader

./: .gitignore  CMakeLists.txt  README.md
samples/IEOpenedTabParser/: IEOpenedTabParser.h  openedtab.cpp
samples/cfb/: cfb.cpp
src/include/: compoundfilereader.h  utf.h
